--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,10 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Colossal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Spells\Sun\Colossal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Epic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Spells\Sun\Epic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="FireCat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Spells\Fire\Fire_Cat\FireCat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="FireCatItemCard" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Spells\Fire\Fire_Cat\FireCatItemCard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Gargantuan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Spells\Sun\Gargantuan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Giant" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Spells\Sun\Giant.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Monstrous" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Spells\Sun\Monstrous.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Strong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Spells\Sun\Strong.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
