--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="FireCatItemCard" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Spells\Fire\Fire_Cat\FireCatItemCard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FireCatStrong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Spells\Fire\Fire_Cat\FireCatStrong.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Gargantuan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Spells\Sun\Gargantuan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
